syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-user/api/proto/v1";

message DeleteUserAvatarRequest {
  string userId = 1;
}

message DeleteUserAvatarResponse {
  string message = 1;
}
