syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-user/api/proto/v1";

message GetUserInfoRequest {
  string userId = 1;
}

message GetUserInfoResponse {
  string userId = 1;
  string firstName = 2;
  string lastName = 3;
  string description = 4;
  string avatar = 5;
}
