syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-user/api/proto/v1";

message SetUserDescriptionRequest {
  string userId = 1;
  optional string description = 2;
}

message SetUserDescriptionResponse {
  string message = 1;
}
